--- a/index.html
+++ b/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Under Construction</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #f0f0f0;
-            color: #333;
-            text-align: center;
-        }
-
-        .robot {
-            font-size: 100px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.2em;
-            color: #555;
-        }
-
-        .container {
-            background: #fff;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LUIQtech – Coming Soon</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <div class="robot">🤖</div>
-        <h1>Website Under Construction</h1>
-        <p>We are currently working hard to bring this site online. Stay tuned!</p>
+  <header class="navbar glass">
+    <div class="logo">
+    
     </div>
+
+    <nav class="nav-links">
+      <a href="#" class="active">Home</a>
+      <a href="#">Preview</a>
+      <a href="#">About</a>
+      <div class="toggle-wrapper">
+        <span>Dark Mode</span>
+        <div id="theme-toggle" class="switch"></div>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1 class="fade-in">LUIQtech – Coming Soon</h1>
+    <p class="fade-in delay">Was wir Ihnen in Zukunft bieten möchten.</p>
+    <p class="fade-in delay2"></p>
+
+    <div class="preview-grid fade-in delay3">
+      <div class="preview-card">
+        <h3>Fluid Design</h3>
+        <p>Ein gutes wertiges Design durch die ganze Website hindurch.</p>
+      </div>
+      <div class="preview-card">
+        <h3>Made in Germany</h3>
+        <p>Wir machen alles ausschließlich in Deutschland vom Anfang bis zum Ende.</p>
+      </div>
+      <div class="preview-card">
+        <h3>Was Wir bieten</h3>
+        <p>Wir sind in Zukunft digital an Ihrer Seite von Hardware bis zur Software.</p>
+      </div>
+    </div>
+
+    <div class="fade-in delay4">
+      <a href="#" class="cta-btn">Stay Tuned</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Luis Brochowski – All rights reserved.</p>
+  </footer>
+
+  <script>
+    const toggle = document.getElementById("theme-toggle");
+    const body = document.body;
+
+    if (localStorage.getItem("theme") === "dark") {
+      body.classList.add("dark");
+      toggle.classList.add("active");
+    }
+
+    toggle.addEventListener("click", () => {
+      body.classList.toggle("dark");
+      toggle.classList.toggle("active");
+      const isDark = body.classList.contains("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+  </script>
 </body>
 </html>
 
